--- a/DigitalUpscaleManagerSite/Web.config
+++ b/DigitalUpscaleManagerSite/Web.config
@@ -10,6 +10,8 @@
     <connectionStrings>
         <add name="DigitalManagerConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\Digital Manager.mdb&quot;;Persist Security Info=True"
             providerName="System.Data.OleDb" />
+        <add name="CustomerFeedbackConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\Digital Manager.mdb&quot;;Persist Security Info=True"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
