--- a/DigitalUpscaleManagerSite/Web.config
+++ b/DigitalUpscaleManagerSite/Web.config
@@ -14,6 +14,12 @@
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <system.web>
+      <siteMap defaultProvider="XmlSiteMapProvider">
+        <providers>
+          <clear/>
+          <add name="XmlSiteMapProvider" type="System.Web.XmlSiteMapProvider" siteMapFile="Web.sitemap"/>
+        </providers>
+      </siteMap>
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
