Fixed MySql error. Added IncidentDisplay page with a DropDownList used to display the customers.

--- a/DigitalUpscaleManagerSite/Web.config
+++ b/DigitalUpscaleManagerSite/Web.config
@@ -7,18 +7,26 @@
 
 <configuration>
 
-    <connectionStrings>
-        <add name="DigitalManagerConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\Digital Manager.mdb&quot;;Persist Security Info=True"
-            providerName="System.Data.OleDb" />
-        <add name="CustomerFeedbackConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\Digital Manager.mdb&quot;;Persist Security Info=True"
-            providerName="System.Data.OleDb" />
-    </connectionStrings>
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
+  <connectionStrings>
+    <add name="DigitalManagerConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\Digital Manager.mdb&quot;;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
+    <add name="CustomerFeedbackConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\Digital Manager.mdb&quot;;Persist Security Info=True"
+      providerName="System.Data.OleDb" />
+    <add name="DigitalUpscaleConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;|DataDirectory|\Digital Manager.mdb&quot;"
+      providerName="System.Data.OleDb" />
+  </connectionStrings>
+  <system.web>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
+    <siteMap defaultProvider="XmlSiteMapProvider">
+      <providers>
+        <clear/>
+        <add name="XmlSiteMapProvider" type="System.Web.XmlSiteMapProvider" siteMapFile="Web.sitemap"/>
+      </providers>
+    </siteMap>
+  </system.web>
   <appSettings>
-      <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-    </appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 
 </configuration>
