Added FeedbackBySupport page and Support class.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /OsaGaiusProject2.zip
+/DigitalUpscaleManagerSite/App_Data/Digital Manager.ldb
